# mcalcus

./: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  main.cpp  matrix.cpp  matrix.h  vectormat.cpp  vectormat.h
